Android: Fix compilation because of missing conversion

Use QStringLiteral instead of QStringView for string data comparison.

Fixes: QTBUG-123105
Pick-to: 6.7 6.7.0
Change-Id: I0b6970d56e8b4a406d1b745c32f0c6d54938c71d
Reviewed-by: Ville Voutilainen <ville.voutilainen@qt.io>
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>